deploy(aws) - successfully deployed to aws lambda and rds

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ infra/**/.terraform/
 infra/**/.terraform.lock.hcl
 infra/**/*.tfstate
 infra/**/*.tfstate.backup
-
+infra/**/*.tfvars
 # Docker
 *.log
 
