feat(python job worker) - implement python jobspy api worker as aws lambda

--- a/backend/air.toml
+++ b/backend/air.toml
@@ -1,8 +1,8 @@
 root = "."
 
 [build]
-cmd = "go build -o tmp/main.exe ./cmd/api"
-entrypoint = "tmp/main.exe"
+cmd = "go build -o tmp/server.exe ./cmd/server"
+entrypoint = "tmp/server.exe"
 
 exclude_dir = ["tmp", "vendor"]
 
