--- a/backend/env.example
+++ b/backend/env.example
@@ -14,3 +14,8 @@ DATABASE_URL=postgres://jobscanner:password@localhost:5433/jobscanner?sslmode=di
 JWT_SECRET=your-super-secret-key-change-in-production
 JWT_EXPIRY_HOURS=24
 
+# OpenAI API Key (for AI job analysis)
+# Get your key at: https://platform.openai.com/api-keys
+# Leave empty to use mock AI responses (good for testing)
+OPENAI_API_KEY=
+
