feat(pipeline) - linked python workers to four go workers

--- a/backend/env.example
+++ b/backend/env.example
@@ -18,3 +18,18 @@ JWT_EXPIRY_HOURS=24
 # Get your key at: https://platform.openai.com/api-keys
 # Leave empty to use mock AI responses (good for testing)
 OPENAI_API_KEY=
+# SQS Queue URLs (for LocalStack local development)
+# NOTE: If using Docker Compose (recommended), these are automatically set in docker-compose.yml
+# You only need these if running workers directly on your machine (outside Docker) for debugging
+JOB_ANALYSIS_QUEUE_URL=http://localhost:4566/000000000000/jobping-job-analysis
+USER_FANOUT_QUEUE_URL=http://localhost:4566/000000000000/jobping-user-fanout
+USER_ANALYSIS_QUEUE_URL=http://localhost:4566/000000000000/jobping-user-analysis
+NOTIFICATION_QUEUE_URL=http://localhost:4566/000000000000/jobping-notification
+
+# AWS Configuration (for LocalStack local development)
+# NOTE: If using Docker Compose (recommended), these are automatically set in docker-compose.yml
+# You only need these if running workers directly on your machine (outside Docker) for debugging
+AWS_ENDPOINT_URL=http://localhost:4566
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
