--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,7 @@
-# API URL (leave empty for local proxy)
-VITE_API_URL=
+# Frontend Environment Variables
+# This file is OPTIONAL - the frontend defaults to http://localhost:8080
 
-# For production (Vercel), set this to your API Gateway URL
-# VITE_API_URL=https://your-api-gateway.amazonaws.com/api/v1
+# Backend API URL
+# Default: http://localhost:8080 (used if not set)
+# Only set this if your backend runs on a different URL
+VITE_API_URL=http://localhost:8080
