--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -35,6 +33,150 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  jobspy_fetcher:
+    build:
+      context: ./python_workers/jobspy_fetcher
+      dockerfile: Dockerfile.dev
+    container_name: jobping-jobspy-fetcher
+    volumes:
+      - ./python_workers/jobspy_fetcher:/app
+    environment:
+      - PORT=8081
+      - DATABASE_URL=postgres://jobscanner:password@postgres:5432/jobscanner?sslmode=disable
+      - JOB_ANALYSIS_QUEUE_URL=http://localstack:4566/000000000000/jobping-job-analysis
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+    ports:
+      - "8081:8081"
+    depends_on:
+      localstack:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    container_name: jobping-backend
+    volumes:
+      - ./backend:/app
+    environment:
+      - ENVIRONMENT=local
+      - PORT=8080
+      - DATABASE_URL=postgres://jobscanner:password@postgres:5432/jobscanner?sslmode=disable
+      - JWT_SECRET=dev-secret-change-in-production
+      - JWT_EXPIRY_HOURS=24
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - JOBSPY_URL=http://jobspy_fetcher:8081
+    ports:
+      - "8080:8080"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      jobspy_fetcher:
+        condition: service_started
+    command: ["air", "-c", ".air.backend.toml"]
+
+  job_analysis_worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    container_name: jobping-job-analysis-worker
+    volumes:
+      - ./backend:/app
+    environment:
+      - WORKER_NAME=job_analysis
+      - ENVIRONMENT=local
+      - DATABASE_URL=postgres://jobscanner:password@postgres:5432/jobscanner?sslmode=disable
+      - JOB_ANALYSIS_QUEUE_URL=http://localstack:4566/000000000000/jobping-job-analysis
+      - USER_FANOUT_QUEUE_URL=http://localstack:4566/000000000000/jobping-user-fanout
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+    depends_on:
+      localstack:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    command: ["air", "-c", ".air.worker.toml"]
+
+  user_fanout_worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    container_name: jobping-user-fanout-worker
+    volumes:
+      - ./backend:/app
+    environment:
+      - WORKER_NAME=user_fanout
+      - ENVIRONMENT=local
+      - DATABASE_URL=postgres://jobscanner:password@postgres:5432/jobscanner?sslmode=disable
+      - USER_FANOUT_QUEUE_URL=http://localstack:4566/000000000000/jobping-user-fanout
+      - USER_ANALYSIS_QUEUE_URL=http://localstack:4566/000000000000/jobping-user-analysis
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+    depends_on:
+      localstack:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    command: ["air", "-c", ".air.worker.toml"]
+
+  user_analysis_worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    container_name: jobping-user-analysis-worker
+    volumes:
+      - ./backend:/app
+    environment:
+      - WORKER_NAME=user_analysis
+      - ENVIRONMENT=local
+      - DATABASE_URL=postgres://jobscanner:password@postgres:5432/jobscanner?sslmode=disable
+      - USER_ANALYSIS_QUEUE_URL=http://localstack:4566/000000000000/jobping-user-analysis
+      - NOTIFICATION_QUEUE_URL=http://localstack:4566/000000000000/jobping-notification
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+    depends_on:
+      localstack:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    command: ["air", "-c", ".air.worker.toml"]
+
+  notifier_worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    container_name: jobping-notifier-worker
+    volumes:
+      - ./backend:/app
+    environment:
+      - WORKER_NAME=notifier
+      - ENVIRONMENT=local
+      - DATABASE_URL=postgres://jobscanner:password@postgres:5432/jobscanner?sslmode=disable
+      - NOTIFICATION_QUEUE_URL=http://localstack:4566/000000000000/jobping-notification
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+    depends_on:
+      localstack:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    command: ["air", "-c", ".air.worker.toml"]
 
 volumes:
   postgres_data:
